--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cesium/engine": "^14.0.0",
+    "@cesium/widgets": "^10.2.0",
     "@headlessui/react": "^2.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@react-three/drei": "^9.121.5",
@@ -20,7 +22,8 @@
     "react-leaflet": "^4.2.1",
     "react-player": "^2.16.0",
     "socket.io-client": "^4.8.1",
-    "three": "^0.173.0"
+    "three": "^0.173.0",
+    "vite-plugin-cesium": "^1.2.23"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
