--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@react-three/drei": "^9.121.5",
     "@react-three/fiber": "^8.17.14",
+    "cesium": "^1.126.0",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
